--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <img src="https://www.looper.com/img/gallery/mclovin-from-superbad-looks-totally-different-today/intro-1535553409.jpg" alt="McLovin">
 
-  <p>Generally, plagiarism is not in itself a crime, but like counterfeiting fraud can be punished in a court[11][12] for prejudices caused by copyright infringement,[13][14] violation of moral rights,[15] or torts. In academia and industry, it is a serious ethical offense.</p>
+  <p>Dave Byington can lick my thiccccc pickle.</p>
   <p>Plagiarism might not be the same in all countries. Some countries, such as India and Poland, consider plagiarism to be a crime, and there have been cases of people being imprisoned for plagiarizing.[19] In other instances, plagiarism might be the complete opposite of "academic dishonesty"</p>
   
   <ul>
